Correctifs couleur et alignements blocs pour page agence

--- a/partials/blocks/agence-adn/agence-adn.scss
+++ b/partials/blocks/agence-adn/agence-adn.scss
@@ -78,6 +78,9 @@
 		}
 	}
 	
+	@include bp(lg) {
+		padding-top: 12rem;
+	}
 	
 	@media screen and (min-width:1200px) {
 
