--- a/partials/blocks/agence-equipe/agence-equipe.scss
+++ b/partials/blocks/agence-equipe/agence-equipe.scss
@@ -143,7 +143,9 @@
 			text-align: left;
 		}
 		.intro {
+			align-items: center;
 			background: #F7F6F8;
+			display: flex;
 			font-size: 2.6rem;
 			grid-column: 1 / span 2;
 			grid-row:2;
