--- a/partials/blocks/agence-leviers/agence-leviers.scss
+++ b/partials/blocks/agence-leviers/agence-leviers.scss
@@ -102,7 +102,7 @@
 		}
 
 		.encart {
-			background-color: var(--blanc);
+			background-color: #F7F6F8;
 			max-width: 90%;;
 			padding:2rem 3rem;
 			position: relative;
